<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wisata Binus</string>
    <!--input-->
    <string name="input_email">Email Address</string>
    <string name="input_password">Password</string>
    <string name="input_phone">Phone Number</string>
    <string name="input_oldPassword">Old Password</string>
    <string name="input_newPassword">New Password</string>
    <!--login-->
    <string name="login_title">LOGIN</string>
    <string name="login_btn">Login</string>
    <string name="login_redirect">Don\'t have an account? Register Now</string>
    <string name="error_emptyForm">Email and Password must be filled</string>
    <string name="error_wrongEmail">Wrong Email</string>
    <string name="error_wrongPassword">Wrong Password</string>
    <string name="success_login">Login Success</string>
    <!--register-->
    <string name="register_title">REGISTER</string>
    <string name="register_btn">Register</string>
    <string name="register_redirect">Already have an account? Login Now</string>
    <!--error-register-->
    <string name="error_emptyRegister">Email, Password and Phone must be filled</string>
    <string name="error_email">Email must be a valid format</string>
    <string name="error_email_com">Email must end with com</string>
    <string name="error_email_notStartAt">Email must not start with @</string>
    <string name="error_email_oneAt">Email must only contain one @</string>
    <string name="error_email_unique">Email must be unique</string>
    <string name="error_phone_numberDigits">Phone must be between 10 to 12 digits inclusively</string>
    <string name="error_phone">Phone must starts with 08</string>
    <string name="error_passwordLength">Password must be at least 8 characters</string>
    <string name="error_password_alphaNumeric">Password must contain both letters and numbers</string>
    <string name="success_register">Register Success</string>
    <string name="error_phone_mustBeNumber">Phone must be digits</string>
    <!--menu-->
    <string name="favorite_menu">Favourite</string>
    <string name="profile_menu">Profile</string>
    <!--profile-->
    <string name="profile_title">Profile</string>
    <string name="profile_accountInfo">Account Information</string>
    <string name="profile_changePassword">Change Password</string>
    <string name="profile_logOut">Log Out</string>
    <string name="error_wrongOldPassword">Wrong Old Password</string>
    <string name="success_changePassword">Success Change Password</string>
    <string name="error_changePasswordForm">Old and New Password must be filled</string>
    <!--campus-detail-->
    <string name="campus_name">[CAMPUS NAME]</string>
    <string name="campus_location_title">Location</string>
    <string name="campus_location">[CAMPUS LOCATION]</string>
    <string name="campus_address">[CAMPUS ADDRESS]</string>
    <string name="campus_address_title">Address</string>
    <string name="campus_detail_favorite">Add to favorite</string>
    <string name="campus_detail_removeFavorite">Remove from favorite</string>
    <!--campus-->
    <string name="campus_list_title">Binus Campus List</string>
    <!--Favorite-->
    <string name="favorite_title">Favorite Campus</string>
    <string name="empty_favorite">No Favorite Campus</string>
    <string name="user_email_profile">[USER_EMAIL]</string>
    <string name="user_phone_profile">[USER_PHONE]</string>
</resources>