<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/profileTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/accountInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_accountInfo"
        android:layout_below="@+id/profileTitleTV"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/emailGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountInfoTV"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"

        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/userEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email_profile"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/phoneGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailGroup"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/input_phone"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/userPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_phone_profile"
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/changePasswordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_changePassword"
        android:layout_below="@+id/phoneGroup"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        />
    <LinearLayout
        android:id="@+id/oldPasswordGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePasswordTV"
        android:orientation="horizontal"
        >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/input_oldPassword"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/newPasswordGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldPasswordGroup"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/input_newPassword"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/newPasswordGroup"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="end"
        >
        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_changePassword"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            />
        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_logOut"
            android:layout_marginTop="26dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

</RelativeLayout>