<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/campusDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campus_name"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/campusDetailImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/default_thumbnail"
        android:layout_below="@+id/campusDetailName"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:id="@+id/campusLocationGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/campusDetailImage">

        <TextView
            android:id="@+id/campusDetailLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campus_location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/campusAddressGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/campusLocationGroup">

        <TextView
            android:id="@+id/campusDetailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campus_address"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/addFavoriteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campus_detail_favorite"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>